Bug 145663 - Not possible to turn light off in '3D View' dialog of a 3D chart
Summary: Not possible to turn light off in '3D View' dialog of a 3D chart
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.4 all versions
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.3.0 target:7.2.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-11-13 19:04 UTC by Regina Henschel
Modified: 2021-12-06 13:28 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
3D chart with illumination (30.56 KB, application/vnd.oasis.opendocument.spreadsheet)
2021-11-13 19:04 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2021-11-13 19:04:39 UTC
Created attachment 176235 [details]
3D chart with illumination

Open attached document.
Activate chart.
Open '3D View' dialog, tab 'Illumination'. Try to turn off a light. You see the light off in the preview in the dialog and in the button. But it is not turned off in the chart.

To turn a light off, you first need to click on the button to make it the active light. Then click again to turn the light off.

The first light is red, the second light is blue. So you can easily see if a light is on or off.

It is OK in Version: 6.4.0.0.alpha0+ (x64)
Build ID: c30ea50dd2b1c557dfbefc1a4c660fbf2402a604
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-06-05_00:23:26
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded

It is broken in Version: 6.4.0.0.alpha0+ (x64)
Build ID: 87238627b025ee6aa61378667e56b1769d4460c2
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-06-09_03:04:32
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded

From git blame, I think, that it is likely, that the regression came in with commit d00a8b05c057d "weld View3DDialog" (Caolán McNamara 2019-06-06). But that needs verification.
Comment 1 Kevin Suo 2021-11-14 12:13:13 UTC
Confirmed on master build as of today Fedora 34 x64, Gtk3.
But not in 6.0.
Bibisecting...
Comment 2 Kevin Suo 2021-11-14 12:50:53 UTC Comment hidden (obsolete)
Comment 3 Kevin Suo 2021-11-14 12:52:13 UTC Comment hidden (obsolete)
Comment 4 Caolán McNamara 2021-11-14 19:41:59 UTC
seems that the index of the light to set to the model is wrong
Comment 5 Caolán McNamara 2021-11-14 19:54:32 UTC
https://gerrit.libreoffice.org/c/core/+/125208
Comment 6 Commit Notification 2021-11-15 15:18:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c2cdae9c87cead2a7901b0c173a9561e24162678

Resolves: tdf#145663 nL is the index of the light to set to the model

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2021-11-15 20:19:42 UTC
fixed in trunk, backport to 7-2 in gerrit
Comment 8 Commit Notification 2021-11-16 09:32:49 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/01ffc179461d6c53371855ba5894eb7f26fa4e8c

Resolves: tdf#145663 nL is the index of the light to set to the model

It will be available in 7.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Christian Lohmaier 2021-12-06 13:28:48 UTC
7.2.4 was a hotfix release, updating target in status-whiteboard