Resolves: tdf#145663 nL is the index of the light to set to the model

don't reuse the variable in another loop before its finally set to the
model

Change-Id: I336d8c0f3ce612448dd639e939e65fb434da1513